# p2p_http

./: CMakeLists.txt  README.md  vix.json
.github/workflows/: p2p-http-strict-ci.yml
examples/: 01_ping_route_basic.cpp  02_status_route_basic.cpp  03_custom_prefix.cpp  04_connect_route_basic.cpp  05_peers_route_basic.cpp  06_logs_route_basic.cpp  07_auth_hook_ctx_basic.cpp  08_auth_hook_legacy_basic.cpp  09_heavy_admin_hook.cpp  10_full_dashboard_server.cpp
include/vix/p2p_http/: P2PHttp.hpp  P2PHttpOptions.hpp  RouteOptions.hpp  p2p_http.hpp
include/vix/p2p_http/middleware/: AuthHook.hpp  HeavyTag.hpp
src/: P2PHttp.cpp
